# notnormal

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
docs/: notnormal.html  search.js
docs/notnormal/: not_normal.html  results.html  run.html  simulate.html
notnormal/: __init__.py  __main__.py  not_normal.py  not_normal_gui.py  results.py  run.py  simulate.py
notnormal/docs/: index.html  notnormal.html  search.js
notnormal/docs/notnormal/: __main__.html  extract.html  filter.html  gui.html  models.html  reconstruct.html  simulate.html  utils.html
notnormal/docs/notnormal/gui/: NN2.html  not_normal_gui.html
notnormal/extract/: __init__.py  methods.py
notnormal/filter/: __init__.py  methods.py
notnormal/gui/: __init__.py  not_normal_gui.py
notnormal/models/: __init__.py  base.py  gui.py  supers.py
notnormal/reconstruct/: __init__.py  events.py  noise.py
notnormal/simulate/: __init__.py  methods.py
notnormal/utils/: __init__.py  methods.py
