[metadata]
name = notnormal
version = 0.2.0a1
author = el20dlgc
author_email = el20dlgc@leeds.ac.uk
url = https://github.com/EL20DLGC/notnormal
description = This package revolves around the NotNormal algorithm, which combines estimation and iteration to automatically extract events from (nano)electrochemical time series data. Additional algorithms are also included for predictive filtering, simulation, reconstruction, augmentation, and clustering.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Intended Audience :: Science/Research
    Natural Language :: English

[options]
packages = find:
install_requires =
    Cython>=3.0
    numpy
    scipy
    stochastic
    ttkbootstrap
    matplotlib
    pyabf
    psutil
    scikit-learn
    umap-learn
    pywavelets

[options.packages.find]
include = notnormal*

[options.package_data]
notnormal =
    data/*
    docs/*
