[metadata]
name = notnormal
version = 0.2.0a1
author = el20dlgc
author_email = el20dlgc@leeds.ac.uk
url = https://github.com/EL20DLGC/notnormal
description = This package revolves around the NotNormal algorithm, which combines estimation and iteration to automatically extract events from (nano)electrochemical time-series data. Additional functionalities for predictive filtering, trace simulation, noise reconstruction, event reconstruction, and augmentation are also included.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent

[options]
python_requires = >=3.11
packages = find:
install_requires =
    Cython>=3.0
    numpy>=1.26.0,<3
    scipy>=1.11.2,<2
    stochastic>=0.6.0,<1
    ttkbootstrap==1.12.*
    matplotlib>=3.7.3,<4
    pyabf>=2.3.6,<3
    psutil>=5.9.4,<8
    scikit-learn>=1.3.1,<2
    umap-learn>=0.5.6,<1
    PyWavelets>=1.5.0,<2
ext_modules = True

[options.packages.find]
include = notnormal*

[options.package_data]
notnormal =
    data/*
    data/**/*
    docs/*
    docs/**/*

[options.entry_points]
console_scripts =
    notnormal = notnormal.__main__:main
